<resources>
    <string name="app_name">ShiftData</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="sign_in">Sign in</string>
    <string name="business">business</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="Already_have_account">Already have an account?</string>
    <string name="select_business">select business</string>
    <string name="select_Business">select Business!</string>
    <string name="welcome">welcome!</string>
    <string name="register">register</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="error_message">wrong username or password</string>
    <string name="shifts">sifts</string>
    <string name="tab_morning">morning shift</string>
    <string name="tab_evening">evening shift</string>
    <string name="tab_night">night shift</string>
    <string name="morning">Morning</string>
    <string name="evening">Evening</string>
    <string name="night">Night</string>
    <string name="Requests">Requests</string>
    <string name="select_shift">Select shift/s</string>
    <string name="add_request">Add request</string>
    <string name="watch_shifts">Watch shifts</string>
    <string name="submit_shifts">Submit shifts</string>
    <string name="My_profile">My profile</string>
    <string name="Log_out">Log_out</string>
    <string name="select_photo">select photo</string>
    <string name="personal_data">personal data</string>
    <string name="First_name">First name</string>
    <string name="Last_name">Last name</string>
    <string name="ID">ID</string>
    <string name="Phone">Phone</string>
    <string name="Age">Age</string>
    <string name="Account">Account</string>
    <string name="Details">Details</string>
    <string name="Delete">Delete</string>
    <string name="Add">Add</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="enter_phone">Enter phone</string>
    <string name="enter_age">Enter age</string>
    <string name="enter_id">Enter id</string>
    <string name="title_activity_menu">shiftData</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Done">Done</string>
    <string name="Edit">Edit</string>
    <string name="company_employees">Employees</string>
    <string name="set_shifts">Set shifts</string>
    <string name="shifts_calender">Shifts calender</string>
    <string name="shifts_request">Shifts request</string>
    <string name="Profile">Profile</string>
    <string name="newWorker">New Worker</string>
    <string name="internet_dialog_title">No Connection</string>
    <string name="internet_supporting_text">please connect to the internet and try again</string>
    <string name="ok">OK</string>
    <string name="pick_date">pick date</string>
    <string name="Select_shift">select shift</string>
    <string name="Select_Worker_from">Select Worker from: </string>
    <string name="All_workers">All workers</string>
    <string name="only_submitted">only submitted</string>
    <string name="Select_Worker">Select Worker</string>
    <string name="Add_to_shift">Add to shift</string>
    <string name="Remove_from_shift">Remove from shift</string>
    <string name="setShifts_error">please select worker</string>
    <string name="select_worker">select worker!</string>
    <string name="new_user">New user?</string>
    <string name="register_here">Register here</string>
    <string name="select_action">Select Action</string>
    <string name="see_profile">PROFILE</string>
    <string name="delete_worker">DELETE</string>
    <string name="cancel">Cancel</string>
    <string name="employee_massage">switch to profile page or delete worker</string>
    <string name="sweep_worker">sweep worker to make a call</string>
    <string name="Contacts">Contacts</string>
    <string name="error_title">Something went wrong…</string>
    <string name="dialog_error_message">please try again later</string>

</resources>