<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/Menu_My_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/My_profile" />
        <item
            android:id="@+id/Menu_watch_shifts"
            android:icon="@drawable/ic_watch_shifts"
            android:title="@string/watch_shifts" />

        <item
            android:id="@+id/Menu_submit_shifts"
            android:icon="@drawable/ic_submit_shifts"
            android:title="@string/submit_shifts" />
        <item
            android:id="@+id/Menu_contacts"
            android:icon="@drawable/ic_company_employees"
            android:title="@string/Contacts" />
    </group>

    <item android:title="@string/Account"
        android:id="@+id/WorkerMenu_account">
        <menu>
            <item
                android:id="@+id/Menu_log_out"
                android:icon="@drawable/ic_log_out"
                android:title="@string/Log_out" />
        </menu>
    </item>

</menu>