<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context="src.Activities.Activity_SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:background="@color/colorTopBackground"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sign_Up"
            android:textSize="40sp"/>

        <ImageView
            android:id="@+id/signUp_IMG_sign_up"
            android:layout_width="80dp"
            android:layout_height="120dp"
            android:paddingStart="10dp"
            android:src="@mipmap/ic_launcher"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/signUp_EDT_business"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:inputType="text"
            android:hint="@string/business"
            android:padding="10dp"
            android:enabled="false"
            android:background="#F2F4F4"/>

        <EditText
            android:id="@+id/signUp_EDT_username"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:inputType="text"
            android:hint="@string/username"
            android:padding="10dp"
            android:enabled="false"
            android:background="#F2F4F4"/>

        <EditText
            android:id="@+id/signUp_EDT_password"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:inputType="numberPassword"
            android:hint="@string/password"
            android:padding="10dp"
            android:enabled="false"
            android:background="#F2F4F4"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/signUp_LBL_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:textColor="#EA1D0E"/>

        <Button
            android:id="@+id/signUp_BTN_signUp"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:text="@string/Sign_Up"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Already_have_account"
                android:layout_marginEnd="5dp"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/signUp_LBL_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textStyle="bold"
                android:textSize="15sp"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>