<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorTopBackground"
    tools:context="src.fragments.Fragment_addWorker">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/addWorker_IV_photo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:scaleType="fitXY"
            android:src="@drawable/ic_add_photo" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addWorker_BTN_editPhoto"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:text="@string/select_photo"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp"
            app:cornerRadius="20dp"
            app:strokeColor="@color/colorPrimaryDark"
            app:strokeWidth="1dp" />


        <EditText
            android:id="@+id/addWorker_EDT_firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_edit_text"
            android:hint="@string/First_name"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="#86818E"
            android:textColorHint="#86818E" />

        <EditText
            android:id="@+id/addWorker_EDT_lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_edit_text"
            android:hint="@string/Last_name"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="#86818E"
            android:textColorHint="#86818E" />

        <EditText
            android:id="@+id/addWorker_EDT_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_edit_text"
            android:hint="@string/ID"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="#86818E"
            android:textColorHint="#86818E" />

        <EditText
            android:id="@+id/addWorker_EDT_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_edit_text"
            android:hint="@string/Phone"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="#86818E"
            android:textColorHint="#86818E" />

        <EditText
            android:id="@+id/addWorker_EDT_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_edit_text"
            android:hint="@string/Age"
            android:inputType="number"
            android:padding="10dp"
            android:textColor="#86818E"
            android:textColorHint="#86818E" />

        <TextView
            android:id="@+id/addWorker_LBL_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text=""
            android:textColor="#EA1D0E"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addWorker_BTN_add"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            android:text="@string/Add"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            app:strokeColor="@color/colorPrimary"
            app:strokeWidth="2dp" />

    </LinearLayout>

</ScrollView>