<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECEAEF">

    <ImageView
        android:id="@+id/raw_IMG_photo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@mipmap/ic_user_round"
        android:layout_marginStart="16dp"
        android:layout_marginTop="19dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />
    
    <TextView
        android:id="@+id/raw_LBL_details"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/raw_IMG_photo"
        android:layout_marginStart="22dp"
        android:layout_alignTop="@id/raw_IMG_photo"
        android:text="@string/First_name"
        android:textColor="#08060B"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/raw_BTN_details"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/raw_LBL_details"
        android:layout_marginStart="10dp"
        android:layout_alignTop="@id/raw_IMG_photo"
        android:textSize="12sp"
        android:text="@string/Details"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/raw_BTN_delete"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/raw_BTN_details"
        android:layout_marginStart="10dp"
        android:layout_alignTop="@id/raw_BTN_details"
        android:textSize="12sp"
        android:text="@string/Delete"/>

</RelativeLayout>