<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTopBackground"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="src.fragments.Fragment_setShifts">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center">

        <EditText
            android:id="@+id/setShifts_EDT_pickDate"
            android:layout_width="190dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:layout_toEndOf="@+id/setShifts_BTN_pickDate"
            android:background="@drawable/rounded_edit_text"
            android:cursorVisible="false"
            android:enabled="false"
            android:hint="@string/pick_date"
            android:inputType="date"
            android:textColor="#100E0E"
            android:textAlignment="center"
            android:textColorHint="@color/menu_line"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/setShifts_BTN_pickDate"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/colorTopBackground"
            android:scaleType="fitXY"
            android:elevation="6dp"
            android:src="@drawable/ic_set_shifts" />

    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <AutoCompleteTextView
            android:id="@+id/setShifts_SPN_select_shift"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#40B1E4"
            android:cursorVisible="false"
            android:gravity="center"
            android:hint="@string/Select_shift"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Select_Worker_from"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.chip.Chip
                android:id="@+id/setShifts_CHIP_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:checkable="true"
                android:text="@string/All_workers"
                android:textColor="#0E0E0E"
                app:chipBackgroundColor="#4D7DC6" />

            <com.google.android.material.chip.Chip
                android:id="@+id/setShifts_CHIP_only_requested"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:checkable="true"
                android:text="@string/only_submitted"
                android:textColor="#0E0E0E"
                app:chipBackgroundColor="#4D7DC6" />
        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <AutoCompleteTextView
            android:id="@+id/setShifts_SPN_select_worker"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#40B1E4"
            android:cursorVisible="false"
            android:gravity="center"
            android:hint="@string/Select_Worker"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/setShifts_BTN_add"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:layout_marginBottom="15dp"
            android:text="@string/Add_to_shift"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            app:strokeColor="@color/colorPrimaryDark"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/setShifts_BTN_remove"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:text="@string/Remove_from_shift"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            app:strokeColor="@color/colorPrimaryDark"
            app:strokeWidth="2dp" />

        <TextView
            android:id="@+id/setShifts_LBL_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text=""
            android:textColor="#EA1D0E"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>